// Copyright (C) 2012 by wubenqi
// Distributable under the terms of either the Apache License (Version 2.0) or 
// the GNU Lesser General Public License, as specified in the COPYING file.
//
// By: wubenqi<wubenqi@gmail.com>
//

syntax = "proto2";
option optimize_for = CODE_SIZE;

package hammer.message;
option java_package = "hammer.message";


//消息类型值描述格式：MESSAGE_XX_YYYYYY
//XX可以描述为：CL、LC、CS、SC、SL、LS
//C客户端、L登陆服务器端、S服务器端程序
//YYYYYY表示消息内容
//例如：MESSAGE_CL_AUTH_CHALLENGE 表示客户端发给登录服务器认证请求

enum MessageTypes {
	MESSAGE_NONE = 0;

	//>>============================================================================================================
	// 客户端<-->登录认证服务器
	MESSAGE_CS_AUTH_CHALLENGE = 1;			// 用户请求认证
	MESSAGE_SC_AUTH_CHALLENGE = 2;			// 返回SESSIONKEY等信息
	MESSAGE_CS_AUTH_PROOF = 3;				// 认证密码和口令是否正确
	MESSAGE_SC_AUTH_PROOF = 4;				// 返回结果

    MESSAGE_CS_SERVER_CHALLENGE_REQUEST = 5;	// 服务器通信认证
	MESSAGE_SC_SERVER_CHALLENGE_ACK = 6;				        // 返回结果

	MESSAGE_CS_SERVER_SESSION_NEW = 7;	  // SESSION
	MESSAGE_SC_SERVER_SESSION_NEW = 8;	  // SESSION
	MESSAGE_CS_SERVER_SESSION_CLOSE = 9;	// SESSION
	MESSAGE_SC_SERVER_SESSION_CLOSE = 10;	// SESSION

	MESSAGE_CS_LOGOUT_REQ = 52;				// 玩家登出游戏
	MESSAGE_SC_RET_LOGOUT = 53;				// 玩家登出游戏（客户端不需要实现，服务端使用）

	// 请求信息假如出错后返回出错代码以及其它附带信息
	MESSAGE_RET_REQ_RESULT = 100;			// 

} // End enum MessageTypes 
